--- a/index.html
+++ b/index.html
@@ -14,22 +14,37 @@
         <nav>
             <ul>
                 <li>
-                    <a href="#">1</a>
+                    <a href="#color-A">1</a>
                 </li>
                 <li>
-                    <a href="#">2</a>
+                    <a href="#color-B">2</a>
                 </li>
                 <li>
-                    <a href="#">3</a>
+                    <a href="#color-C">3</a>
                 </li>
             </ul>
         </nav>
     </header>
     <!-- CORPO -->
     <main>
-        <section id="color-A"></section>
-        <section id="color-B"></section>
-        <section id="color-C"></section>
+        <section id="color-A">
+            <div class="box-product">
+                <img src="img/01.png" alt="">
+                <h1>IL NOSTRO MODELLO DI PUNTA</h1>
+            </div>
+        </section>
+        <section id="color-B">
+            <div class="box-product">
+                <img src="img/02.png" alt="">
+                <h1>IL NOSTRO MODELLO DI PUNTA</h1>
+            </div>
+        </section>
+        <section id="color-C">
+            <div class="box-product">
+                <img src="img/03.png" alt="">
+                <h1>IL NOSTRO MODELLO DI PUNTA</h1>
+            </div>
+        </section>
     </main>
 
     
