--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-    <!-- INTESTAZIONE -->
+    <!------------------- INTESTAZIONE ---------------------->
     <header>
-        <!-- NAVIGAZIONE -->
+        <!------------------- NAVIGAZIONE ---------------------->
         <nav>
             <ul>
                 <li>
@@ -25,7 +25,7 @@
             </ul>
         </nav>
     </header>
-    <!-- CORPO -->
+    <!---------------------- CORPO ---------------------->
     <main>
         <section id="color-A">
             <div class="box-product">
