google font fix

--- a/index.html
+++ b/index.html
@@ -4,8 +4,14 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>htmlcss-shoes</title>
+    
+    <!------------------- GOOGLE font ------------------->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Rubik+Mono+One&display=swap" rel="stylesheet">
+
     <link rel="stylesheet" href="css/style.css">
+    <title>htmlcss-shoes</title>
 </head>
 <body>
     <!------------------- INTESTAZIONE ---------------------->
@@ -45,8 +51,6 @@
                 <h1>IL NOSTRO MODELLO DI PUNTA</h1>
             </div>
         </section>
-    </main>
-
-    
+    </main>    
 </body>
 </html>
